--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,11 @@ parts/
 sdist/
 var/
 wheels/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -49,25 +51,6 @@ coverage.xml
 .pytest_cache/
 cover/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
 # Jupyter Notebook
 .ipynb_checkpoints
 
@@ -78,10 +61,14 @@ ipython_config.py
 # pyenv
 .python-version
 
-# celery beat schedule file
+# Celery
 celerybeat-schedule
+celerybeat.pid
 
-# dotenv
+# SageMath parsed files
+*.sage.py
+
+# Environments
 .env
 .venv
 env/
@@ -97,17 +84,56 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
 # VS Code
 .vscode/
 
+# Logs
+*.log
+
+# Local environment variables
+.env
+
+# Secrets
+secrets.json
+
+# Output files
+*.csv
+*.txt
+
+# WebDriver
+chromedriver
+geckodriver
+
+# Ignore the scrape_errors.log file
+scrape_errors.log
+
+# Django stuff:
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
 # MySQL
 *.sql
-
-# CSV files
-*.csv
-
-# Text files
-*.txt
 
 # macOS
 .DS_Store
